unpackaged/main/default/objects/PictogrammesSegmentation__c/PictogrammesSegmentation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PictogrammesSegmentation</label>
</CustomObject>