unpackaged/main/default/objects/PictogrammesSegmentation__c/fields/ARGENT__c.field-meta.xml
<CustomField>
    <fullName>ARGENT__c</fullName>
    <label>ARGENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>