unpackaged/main/default/objects/PictogrammesSegmentation__c/fields/BRONZE__c.field-meta.xml
<CustomField>
    <fullName>BRONZE__c</fullName>
    <label>BRONZE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>