unpackaged/main/default/objects/PictogrammesSegmentation__c/fields/OR__c.field-meta.xml
<CustomField>
    <fullName>OR__c</fullName>
    <label>OR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>