unpackaged/main/default/objects/PictogrammesSegmentation__c/fields/P2__c.field-meta.xml
<CustomField>
    <fullName>P2__c</fullName>
    <label>P2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>