unpackaged/main/default/objects/PictogrammesSegmentation__c/fields/P3__c.field-meta.xml
<CustomField>
    <fullName>P3__c</fullName>
    <label>P3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>